[package]
name = "smart_meter"
version = "0.1.0"
edition = "2018"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for reading smart meters."
documentation = "https://docs.rs/smart_meter"
repository = "https://github.com/reitermarkus/smart-meter-rs"
homepage = "https://github.com/reitermarkus/smart-meter-rs"

[dependencies]
mbusparse = { version = "0.1.1" }
dlms_cosem = { version = "0.1.1", features = ["serde"] }
nom = "7.0"
serialport = { version = "4.0", optional = true }
either = { version = "1.6", optional = true }
hex = { version = "0.4", optional = true }
webthing = { version = "0.14.0", optional = true }
serde_json = { version = "1.0", optional = true }
actix-rt = { version = "1.1", optional = true }

[[example]]
name = "logger"
required-features = ["serialport", "hex"]

[[example]]
name = "server"
required-features = ["serialport", "hex", "webthing", "serde_json", "actix-rt"]
