[package]
name = "smart_meter"
version = "0.1.0"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for reading smart meters."
documentation = "https://docs.rs/smart_meter"
repository = "https://github.com/reitermarkus/smart-meter-rs"
homepage = "https://github.com/reitermarkus/smart-meter-rs"

[dependencies]
mbusparse = "0.1"
dlms_cosem = "0.1"
nom = "7.1"
serialport = { version = "4.0", default-features = false, optional = true }
hex = { version = "0.4", optional = true }

[[example]]
name = "logger"
required-features = ["serialport", "hex"]
